# breakneck-baseball

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.claude/: settings.json
.claude/skills/run-web/: SKILL.md
.github/workflows/: ci.yml  pages.yml
docs/superpowers/plans/: 2026-07-16-game-variants-front-yard.md  2026-07-16-visual-overhaul-theming.md  2026-07-17-physics-animation.md  2026-07-18-advanced-baseball-rules.md  2026-07-18-regulation-rules-innings-e2e.md  2026-07-19-live-play-resolution.md  2026-07-19-rule-e2e-and-cpu-steals.md
docs/superpowers/specs/: 2026-07-16-game-variants-front-yard-design.md  2026-07-16-playable-baseball-game-design.md  2026-07-16-visual-overhaul-theming-design.md  2026-07-17-physics-animation-design.md
src/: lib.rs  main.rs
src/game/: ai.rs  animation.rs  audio.rs  ball.rs  camera.rs  field.rs  fielding.rs  flow.rs  fx.rs  input.rs  jersey.rs  menu.rs  mod.rs  player.rs  roster.rs  rules.rs  runner.rs  subs.rs  theme.rs  ui.rs  variant.rs
tests/: e2e_advanced_rules.rs  e2e_cpu.rs  e2e_full_game.rs  e2e_pause_subs.rs
tests/common/: mod.rs
web/: index.html
