[package]
name = "breakneck-baseball"
version = "0.1.0"
edition = "2021"
description = "A 3D baseball game built with Bevy, wgpu, and Rapier"
license = "MIT OR Apache-2.0"

[[bin]]
name = "breakneck-baseball"
path = "src/main.rs"

[dependencies]
# Game engine — uses wgpu as its rendering backend
bevy = { version = "0.15" }

# 3D physics (features are target-specific, see below)
bevy_rapier3d = { version = "0.28", features = ["debug-render-3d"] }

# ── Native-only: enable SIMD acceleration for Rapier ──────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_rapier3d = { version = "0.28", features = ["simd-stable", "debug-render-3d"] }

# ── WASM-only: pull in wasm-bindgen for the web target ────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []

# Enable this for faster iteration in development (loads Bevy as a dynamic library)
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

# ── WASM release profile — smaller binary, faster load ────────────────────────
[profile.wasm-release]
inherits = "release"
opt-level = "z"          # optimise for binary size
strip = "debuginfo"
lto = true
codegen-units = 1
